# search-r1

./: .gitignore  README.md  pyproject.toml
configs/: search_r1_qwen3b_bm25.yaml  search_r1_qwen3b_bm25_gigpo.yaml
data/: prepare_qa_data.py  prepare_verl_parquet.py
demo/: app.py
patches/: verl-agent-vllm020-torch211.patch
remote_artifacts/grpo_20260707/logs/: retrieval_recall_audit_validation.csv  retrieval_recall_audit_validation_summary.json
remote_artifacts/test_20260707/gigpo_machine/logs/: retrieval_recall_audit_test.csv  retrieval_recall_audit_test_summary.json
remote_artifacts/test_20260707/grpo_machine/logs/: direct_answer_test.jsonl  direct_answer_test.summary.json
reports/: final_test_results_report.md  gigpo_experiment_report.md  grpo_experiment_report.md
scripts/: audit_retrieval_recall.py  build_index.sh  env.sh  evaluate.sh  evaluate_direct_answer.py  evaluate_oneshot_bm25_rag.py  install_java.sh  install_remote.sh  launch_retriever.sh  prepare_verl_data.sh  train.sh  train_verl_search_gigpo.sh  train_verl_search_grpo.sh  wait_gpu_smoke_train.sh  watch_and_build_index.sh
src/search_r1_bm25/: data_prepare.py
src/search_r1_bm25/agent/: parser.py  reward.py  rollout_logger.py  search_tool.py
src/search_r1_bm25/evaluation/: analyze_trajectories.py  retrieval_metrics.py
src/search_r1_bm25/retrieval/: build_bm25_index.py  client.py  server.py
tests/: test_agent_core.py
